--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,3 +9,5 @@ on:
 jobs:
   call-build-test:
     uses: ./.github/workflows/build-test.yaml
+  call-publish-myget:
+    uses: ./.github/workflows/publish-myget.yaml
